ft(src): add permissions
ft(locales):improve languages

ft(env):improve env

ft(swagger):improve swagger
